rm scrollbar fix input and text area

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -64,9 +64,6 @@ body {
     -ms-overflow-style: none;
     font-family: 'Work Sans', sans-serif !important;
 }
-body::-webkit-scrollbar {
-    display: none;
-}
 ::selection {
     color: var(--light) !important;
     background-color: var(--dark) !important;
@@ -77,6 +74,9 @@ main {
     animation-duration: 500ms;
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
+}
+.modal-body::-webkit-scrollbar {
+    display: none;
 }
 pre::-webkit-scrollbar {
     height: 0;
@@ -243,6 +243,16 @@ span::selection {
     .navbar-toggler {
         /* border: 1px solid rgb(var(--root-secondary-rgb)) !important; */
         background-color: var(--light) !important;
+    }
+    .btn-dark.disabled, .btn-magenta.disabled {
+        color: #ffffff !important;
+    }
+    input, textarea {
+        color: var(--light) !important;
+    }
+    button.btn-close.shadow-none {
+        /* display: none; */
+        filter: invert(100%);
     }
 }
 /* Keyframe */
